# PilSIM

./: .#Pretty.hs  .gitignore  CHANGELOG.md  Examples.hs  InstrSet.hs  LICENSE  Pretty.hs  README.md  SimpleCore.hs  Simulate.hs  Translate.hs  pilsim.cabal
comparisons/: getCycles.sh  mss.fl  ordlist.fl  sum.fl
comparisons/flite/: foldr.fl
comparisons/ghc/: exampls  exampls.hs
src/: Examples.hs  InstrSet.hs  Main.hs  Pretty.hs  SimpleCore.hs  Simulate.hs  Translate.hs
