cabal-version:      2.4
name:               pilsim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Craig Ramsay
maintainer:         craig.ramsay@hw.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable pilsim
    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Examples InstrSet Pretty SimpleCore Simulate Translate

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.12.0.0,
                      mtl,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010
